feat: 移除 /luxejapan-public 前綴，優化部署配置，確保網站能正確部署到 luxejapan.vip

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -208,7 +208,7 @@
   },
   "terms": {
     "title": "Terms of Service",
-    "intro": "Welcome to {brand} (hereinafter 'we'). To ensure the safety and rights of both parties, please read and comply with the following terms:",
+    "description": "Welcome to {brand} (hereinafter 'we'). To ensure the safety and rights of both parties, please read and comply with the following terms:",
     "sections": [
       { "title": "I. Health and Hygiene", "content": "For intimate encounters, clients must bathe and maintain oral hygiene before service, and inform about their health status; if the client has fever, respiratory infection, skin or sexual disease, or if the companion suspects these conditions, service may be terminated immediately; during service, if any contagious disease or discomfort is detected, we may cancel the service." },
       { "title": "II. Respect and Safety", "content": "For intimate encounters, respect the lady and use protection; any rejection or insistence on non-consensual acts will result in immediate service termination; long nails, dry skin on hands, or other conditions that may cause discomfort must be addressed before service; violence, pulling, mistreatment, SM accessories, or special behaviors not previously agreed upon are prohibited;" },
