--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -88,5 +88,9 @@
     "notFoundTitle": "Page Not Found",
     "notFoundDesc": "The page you are looking for does not exist. If you have any questions, please contact us.",
     "contactUs": "Contact Us"
+  },
+  "terms": {
+    "title": "Terms of Service - Luxe Japan Elite Escorts",
+    "description": "Welcome to Luxe Japan Elite Escorts. To ensure the safety and rights of both parties, please read and comply with our terms of service."
   }
 } 
