--- a/src/i18n/zh-tw.json
+++ b/src/i18n/zh-tw.json
@@ -78,7 +78,7 @@
         "高端客人常須自行協調多家店家與繁瑣細節，難以享受完整無憂的服務。"
       ],
       "experienceTitle": "服務體驗",
-      "experienceParagraph": "在 {brand}，您可以安心將伴遊服務交給我們，甚至是高級車接送司機的安排，無需為租車手續煩憂，也不用擔心法律與語言隔閡所帶來的糾紛。我們的專屬客服將全程引導：",
+      "experienceParagraph": "在{brand}，您可以安心將伴遊服務交給我們，甚至是高級車接送司機的安排，無需為租車手續煩憂，也不用擔心法律與語言隔閡所帶來的糾紛。我們的專屬客服將全程引導：",
       "experienceList": [
         "豪華接送：從機場至酒店，由 Toyota Alphard、LEXUS LM 或勞斯萊斯車隊護航；",
         "行程無縫對接：所有路線與預約均由我們統籌，讓您盡情放鬆；",
@@ -208,7 +208,7 @@
   },
   "terms": {
     "title": "使用者條款",
-    "intro": "歡迎您使用 {brand}（以下簡稱「本店」）之高端伴遊服務。為維護雙方安全與權益，敬請詳閱並遵守下列條款：",
+    "description": "歡迎您使用 {brand}（以下簡稱「本店」）之高端伴遊服務。為維護雙方安全與權益，敬請詳閱並遵守下列條款：",
     "sections": [
       { "title": "一、健康與衛生", "content": "如有親密的約會行為，客人須於約定服務前完成沐浴與口腔清潔，並如實告知自身健康狀況；若客人有發燒、呼吸道感染、皮膚接觸傳染病或性病之症狀，或經伴遊佳人判斷有該等疑慮，伴遊佳人有權立即終止服務；服務期間，如發現任何傳染病或不適，本店有權中止並取消後續行程。" },
       { "title": "二、尊重與安全", "content": "如有親密行為，請尊重女性，做好防護措施；任何拒絕或強行進行未經同意之行為，伴遊佳人有權立即終止服務；指甲過長、手部皮膚乾燥粗糙等可能對伴遊佳人造成傷害之情形，請事先修整或停止相關動作；嚴禁使用任何暴力、拉扯、過度苛虐、SM 道具或未事先協商之特殊行為；" },
