--- a/src/i18n/ko.json
+++ b/src/i18n/ko.json
@@ -207,20 +207,20 @@
     ]
   },
   "terms": {
-    "title": "이용약관",
-    "intro": "{brand}(이하 '본점')의 프리미엄 동반 서비스를 이용해 주셔서 감사합니다. 양측의 안전과 권익을 보호하기 위해 다음 약관을 자세히 읽고 준수해 주시기 바랍니다:",
+    "title": "이용 약관",
+    "description": "{brand}(이하 '본점')의 프리미엄 동반 서비스를 이용해 주셔서 감사합니다. 양측의 안전과 권익을 보호하기 위해 본 약관을 자세히 읽고 준수해 주시기 바랍니다.",
     "sections": [
-      { "title": "1. 건강 및 위생", "content": "친밀한 만남이 있을 경우, 고객은 서비스 전 목욕과 구강 청결을 완료하고 자신의 건강 상태를 정직하게 알려야 합니다. 고객이 발열, 호흡기 감염, 피부 접촉 전염병이나 성병 증상이 있거나, 동반자가 해당 우려가 있다고 판단할 경우, 동반자는 즉시 서비스를 중단할 권리가 있습니다. 서비스 중 전염병이나 불편함이 발견될 경우, 본점은 서비스를 중단하고 후속 일정을 취소할 권리가 있습니다." },
-      { "title": "2. 존중 및 안전", "content": "친밀한 행위가 있을 경우, 여성을 존중하고 보호 조치를 취해 주세요. 동의하지 않은 행위를 거부하거나 강요할 경우, 동반자는 즉시 서비스를 중단할 권리가 있습니다. 손톱이 길거나 손 피부가 건조하고 거칠어 동반자에게 상처를 줄 수 있는 경우, 사전에 정리하거나 관련 행동을 중단해 주세요. 모든 폭력, 당기기, 과도한 학대, SM 도구 또는 사전 협의되지 않은 특별 행위는 엄격히 금지됩니다." },
-      { "title": "3. 프라이버시 및 촬영", "content": "모든 카메라, 휴대폰 카메라 또는 녹음 장비를 사용한 촬영, 몰래 촬영, 녹음 또는 도청은 엄격히 금지됩니다. 본점과 동반자의 동의 없이 개인적으로 연락처를 요청하거나, 점 외 데이트를 요청하거나, 개인적으로 스카우트하는 것은 심각한 계약 위반으로 간주됩니다." },
-      { "title": "4. 서비스 제한", "content": "18세 미만(고등학생 포함)은 이용이 금지됩니다. 음주 상태, 불법 약물 사용 중이거나 부적절하다고 판단되는 고객은 거부될 수 있습니다. 갱단, 불법 단체 또는 위장 경쟁자는 거부됩니다. 모든 모욕적, 차별적, 종교/정치 선전 또는 부적절한 행위는 금지됩니다." },
-      { "title": "5. 취소 정책", "content": "고객은 취소 또는 변경을 72시간 전에 통지해야 하며, 그렇지 않을 경우 1회 서비스 비용에 해당하는 수수료가 부과됩니다. 날씨, 교통 또는 비상 상황으로 인해 본점이 취소해야 할 경우, 즉시 통지하고 전액 환불 또는 재예약을 제공합니다." },
-      { "title": "6. 불가항력", "content": "지진, 태풍, 전염병 제한 또는 교통 통제의 경우, 본점은 책임을 지지 않으며 대체 방안이나 환불을 지원합니다." },
-      { "title": "7. 데이터 보호", "content": "본점은 데이터 보호법에 따라 귀하의 개인 정보를 처리하며, 관련 서비스에만 사용합니다. 귀하의 서면 동의 없이는 제3자와 데이터를 공유하지 않으며, 기술적 및 행정적 조치를 구현하여 보안을 유지합니다." },
-      { "title": "8. 책임 제한", "content": "법률에 별도 규정이 없는 한, 본점은 예측할 수 없거나 본점의 고의 또는 중대한 과실이 아닌 손해에 대해 책임을 지지 않습니다. 고객의 부적절한 행위로 인해 제3자가 청구할 경우, 고객은 자체적으로 책임을 지고 관련 손해를 배상해야 합니다." },
-      { "title": "9. 서비스 거부 및 중단", "content": "동반자가 어떤 행위에 대해 명확히 거부했음에도 고객이 계속 요구할 경우, 이는 심각한 계약 위반이 되며 법적 처벌을 받을 수 있습니다. 고객이 확정된 시간과 장소를 자주 임시 변경하거나 취소할 경우, 본점은 상황에 따라 서비스를 조정하거나 중단할 권리가 있습니다. 앞서 언급된 약관을 위반하여 본점이 '부적절한 고객'으로 판단하는 경우, 즉시 서비스를 중단하고 별도의 환불을 하지 않습니다." },
-      { "title": "10. 블랙리스트 및 법적 책임", "content": "본점이 악의적 위반, 사기 또는 불법 행위로 판단하는 경우, 블랙리스트에 등록되어 평생 본점 서비스 이용이 금지됩니다. 고객의 불법 행위로 인해 본점이나 동반자가 피해를 입을 경우, 본점은 경찰 기관에 신고하고 민사/형사 책임을 추적할 권리를 보유합니다. 이는 관련 비용 청구에 국한되지 않습니다." },
-      { "title": "11. 분쟁 해결", "content": "본 약관에 분쟁이 있을 경우, 양측은 먼저 우호적으로 협의해야 합니다. 협의가 이루어지지 않을 경우, 양측은 도쿄 지방 법원을 제1심 관할 법원으로 합의합니다." }
+      { "title": "I. 건강 및 위생", "content": "친밀한 만남이 있을 경우, 고객은 서비스 전 목욕과 구강 청결을 완료하고 자신의 건강 상태를 정직하게 알려야 합니다. 고객이 발열, 호흡기 감염, 피부 접촉 전염병이나 성병 증상이 있거나, 동반자가 해당 우려가 있다고 판단할 경우, 동반자는 즉시 서비스를 중단할 권리가 있습니다. 서비스 중 전염병이나 불편함이 발견될 경우, 본점은 서비스를 중단하고 후속 일정을 취소할 권리가 있습니다." },
+      { "title": "II. 존중 및 안전", "content": "친밀한 행위가 있을 경우, 여성을 존중하고 보호 조치를 취해 주세요. 동의하지 않은 행위를 거부하거나 강요할 경우, 동반자는 즉시 서비스를 중단할 권리가 있습니다. 손톱이 길거나 손 피부가 건조하고 거칠어 동반자에게 상처를 줄 수 있는 경우, 사전에 정리하거나 관련 행동을 중단해 주세요. 모든 폭력, 당기기, 과도한 학대, SM 도구 또는 사전 협의되지 않은 특별 행위는 엄격히 금지됩니다." },
+      { "title": "III. 프라이버시 및 촬영", "content": "모든 카메라, 휴대폰 카메라 또는 녹음 장비를 사용한 촬영, 몰래 촬영, 녹음 또는 도청은 엄격히 금지됩니다. 본점과 동반자의 동의 없이 개인적으로 연락처를 요청하거나, 점 외 데이트를 요청하거나, 개인적으로 스카우트하는 것은 심각한 계약 위반으로 간주됩니다." },
+      { "title": "IV. 서비스 제한", "content": "18세 미만(고등학생 포함)은 이용이 금지됩니다. 음주 상태, 불법 약물 사용 중이거나 부적절하다고 판단되는 고객은 거부될 수 있습니다. 갱단, 불법 단체 또는 위장 경쟁자는 거부됩니다. 모든 모욕적, 차별적, 종교/정치 선전 또는 부적절한 행위는 금지됩니다." },
+      { "title": "V. 취소 정책", "content": "고객은 취소 또는 변경을 72시간 전에 통지해야 하며, 그렇지 않을 경우 1회 서비스 비용에 해당하는 수수료가 부과됩니다. 날씨, 교통 또는 비상 상황으로 인해 본점이 취소해야 할 경우, 즉시 통지하고 전액 환불 또는 재예약을 제공합니다." },
+      { "title": "VI. 불가항력", "content": "지진, 태풍, 전염병 제한 또는 교통 통제의 경우, 본점은 책임을 지지 않으며 대체 방안이나 환불을 지원합니다." },
+      { "title": "VII. 데이터 보호", "content": "본점은 데이터 보호법에 따라 귀하의 개인 정보를 처리하며, 관련 서비스에만 사용합니다. 귀하의 서면 동의 없이는 제3자와 데이터를 공유하지 않으며, 기술적 및 행정적 조치를 구현하여 보안을 유지합니다." },
+      { "title": "VIII. 책임 제한", "content": "법률에 별도 규정이 없는 한, 본점은 예측할 수 없거나 본점의 고의 또는 중대한 과실이 아닌 손해에 대해 책임을 지지 않습니다. 고객의 부적절한 행위로 인해 제3자가 청구할 경우, 고객은 자체적으로 책임을 지고 관련 손해를 배상해야 합니다." },
+      { "title": "IX. 서비스 거부 및 중단", "content": "동반자가 어떤 행위에 대해 명확히 거부했음에도 고객이 계속 요구할 경우, 이는 심각한 계약 위반이 되며 법적 처벌을 받을 수 있습니다. 고객이 확정된 시간과 장소를 자주 임시 변경하거나 취소할 경우, 본점은 상황에 따라 서비스를 조정하거나 중단할 권리가 있습니다. 앞서 언급된 약관을 위반하여 본점이 '부적절한 고객'으로 판단하는 경우, 즉시 서비스를 중단하고 별도의 환불을 하지 않습니다." },
+      { "title": "X. 블랙리스트 및 법적 책임", "content": "본점이 악의적 위반, 사기 또는 불법 행위로 판단하는 경우, 블랙리스트에 등록되어 평생 본점 서비스 이용이 금지됩니다. 고객의 불법 행위로 인해 본점이나 동반자가 피해를 입을 경우, 본점은 경찰 기관에 신고하고 민사/형사 책임을 추적할 권리를 보유합니다. 이는 관련 비용 청구에 국한되지 않습니다." },
+      { "title": "XI. 분쟁 해결", "content": "본 약관에 분쟁이 있을 경우, 양측은 먼저 우호적으로 협의해야 합니다. 협의가 이루어지지 않을 경우, 양측은 도쿄 지방 법원을 제1심 관할 법원으로 합의합니다." }
     ],
     "effect": "본 약관은 공고일부터 효력이 발생하며, 본점 서비스를 이용하는 것은 귀하가 본 약관을 충분히 읽고, 이해하며, 준수할 것에 동의한 것으로 간주됩니다."
   },
@@ -290,8 +290,8 @@
       "description": "본 개인정보 처리방침은 Luxe Japan Elite Escorts(이하 '본사')가 운영하는 웹사이트 및 관련 서비스에 적용됩니다. 당사는 개인정보 보호 규정을 엄격히 준수하여 귀하의 개인정보를 안전하게 보호합니다."
     },
     "terms": {
-      "title": "이용약관 - Luxe Japan Elite Escorts",
-      "description": "Luxe Japan Elite Escorts(이하 '본점')의 프리미엄 동반 서비스를 이용해 주셔서 감사합니다. 양측의 안전과 권익을 보호하기 위해 본 약관을 자세히 읽고 준수해 주시기 바랍니다."
+      "title": "이용 약관 - Luxe Japan Elite Escorts",
+      "description": "{brand}(이하 '본점')의 프리미엄 동반 서비스를 이용해 주셔서 감사합니다. 양측의 안전과 권익을 보호하기 위해 본 약관을 자세히 읽고 준수해 주시기 바랍니다."
     },
     "contact": {
       "title": "문의하기 - Luxe Japan Elite Escorts",
